A number of minor changes and steps to get the app up and running
- Created configuration to run with uwsgi under nginx
- Updated Google Analytics js and made the tracking id configurable
- Updated to run on up to date versions of flask and other dependencies
- Changed the code so it does not run in debug mode by default
- Updated readme with sample steps to get the site up and running
- Increased levels.number column width from 5 to 10
- Added sql scripts with initial data for levels and leaderboards tables
- Changed the registration email code so that the region is configurable
- Changed the registration email code so that it does not attempt to
send an email of no AWS key is configured

--- a/spacechem.cfg.example
+++ b/spacechem.cfg.example
@@ -1,7 +1,9 @@
-SQLALCHEMY_DATABASE_URI = 'postgresql://username:password@hostname/dbname'
+SQLALCHEMY_DATABASE_URI = 'postgresql:///spacechem'
 SECRET_KEY = 'secret for session encryption'
-UPLOADS_DEFAULT_DEST = '/path/to/upload/destination/folder'
-UPLOADS_DEFAULT_URL = 'http://url.to/upload/destination/folder/'
-AWS_ACCESS_KEY_ID = 'AWS access key id'
-AWS_SECRET_ACCESS_KEY = 'AWS secret access key'
+UPLOADS_DEFAULT_DEST = '/home/spacechem/upload'
+AWS_ACCESS_KEY_ID = 'no emails out'
+AWS_SECRET_ACCESS_KEY = 'no emails out'
+AWS_REGION = 'us-west-2'
 FROM_EMAIL_ADDRESS = 'from@spacechem.net'
+SRV_NAME = 'spacechem.net'
+GA_ID = 'Google Analytics Tracking id'
