--- a/spacechem.wsgi.example
+++ b/spacechem.wsgi.example
@@ -1,4 +1,4 @@
 import sys
-sys.path.append("/path/to/source/files")
+sys.path.append("/home/rx/SolutionNet/")
 
 from spacechem import app as application
